--- a/templates/HTML/Home.html
+++ b/templates/HTML/Home.html
@@ -127,14 +127,14 @@
                 <h3 style="margin: 0; font-size: 2.5rem;">Stock Charts</h3>
                 <hr>
                 <div class="button-container">
-                    <button class="action-button" onclick="callAPI('1D');">1D</button>
-                    <button class="action-button" onclick="callAPI('5D');">5D</button>
-                    <button class="action-button" onclick="callAPI('1M');">1M</button>
-                    <button class="action-button" onclick="callAPI('3M');">3M</button>
-                    <button class="action-button" onclick="callAPI('6M');">6M</button>
-                    <button class="action-button" onclick="callAPI('1Y');">1Y</button>
-                    <button class="action-button" onclick="callAPI('3Y');">3Y</button>
-                    <button class="action-button" onclick="callAPI('5Y');">5Y</button>
+                    <button class="action-button" onclick="callAPI('${inputText}', '1D');">1D</button>
+                    <button class="action-button" onclick="callAPI(${inputText}, '5D');">5D</button>
+                    <button class="action-button" onclick="callAPI(${inputText},'1M');">1M</button>
+                    <button class="action-button" onclick="callAPI(${inputText},'3M');">3M</button>
+                    <button class="action-button" onclick="callAPI(${inputText},'6M');">6M</button>
+                    <button class="action-button" onclick="callAPI(${inputText},'1Y');">1Y</button>
+                    <button class="action-button" onclick="callAPI(${inputText},'3Y');">3Y</button>
+                    <button class="action-button" onclick="callAPI(${inputText},'5Y');">5Y</button>
                 </div>`;
 
                 const stockDatesButton = document.getElementById('stock-dates-buttons');
@@ -147,15 +147,16 @@
             }
         });
 
-        async function callAPI(buttonId) {
+        async function callAPI(inputText, buttonId) {
             console.log(buttonId);
+            console.log(inputText);
             
             const response = await fetch(`http://127.0.0.1:5000/api/stock/chart`, {
                 method: 'POST', // or 'POST', depending on your API
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({ time_duration : buttonId })
+                body: JSON.stringify({ stock_code: inputText , time_duration : buttonId })
             });
 
             const data = response.json();
