--- a/templates/HTML/Home.html
+++ b/templates/HTML/Home.html
@@ -128,13 +128,13 @@
                 <hr>
                 <div class="button-container">
                     <button class="action-button" onclick="callAPI('${inputText}', '1D');">1D</button>
-                    <button class="action-button" onclick="callAPI(${inputText}, '5D');">5D</button>
-                    <button class="action-button" onclick="callAPI(${inputText},'1M');">1M</button>
-                    <button class="action-button" onclick="callAPI(${inputText},'3M');">3M</button>
-                    <button class="action-button" onclick="callAPI(${inputText},'6M');">6M</button>
-                    <button class="action-button" onclick="callAPI(${inputText},'1Y');">1Y</button>
-                    <button class="action-button" onclick="callAPI(${inputText},'3Y');">3Y</button>
-                    <button class="action-button" onclick="callAPI(${inputText},'5Y');">5Y</button>
+                    <button class="action-button" onclick="callAPI('${inputText}', '5D');">5D</button>
+                    <button class="action-button" onclick="callAPI('${inputText}','1M');">1M</button>
+                    <button class="action-button" onclick="callAPI('${inputText}','3M');">3M</button>
+                    <button class="action-button" onclick="callAPI('${inputText}','6M');">6M</button>
+                    <button class="action-button" onclick="callAPI('${inputText}','1Y');">1Y</button>
+                    <button class="action-button" onclick="callAPI('${inputText}','3Y');">3Y</button>
+                    <button class="action-button" onclick="callAPI('${inputText}','5Y');">5Y</button>
                 </div>`;
 
                 const stockDatesButton = document.getElementById('stock-dates-buttons');
@@ -161,17 +161,6 @@
 
             const data = response.json();
             
-            const chartDiv = document.getElementById(`stock-chart-xx-time`);
-    
-            // Clear any previous content
-            chartDiv.innerHTML = 'The code works';
-
-            // Insert the image inside the div
-            const img = document.createElement('img');
-            img.src = data.image_url;  // Assuming the API returns a URL for the image
-            img.alt = `Chart for Time Duration ${buttonId}`;
-            img.width = 500;  // You can adjust the width or other properties if needed
-            chartDiv.appendChild(img);
             
         }
 
