--- a/templates/HTML/Home.html
+++ b/templates/HTML/Home.html
@@ -70,6 +70,9 @@
     </div>
     <div class="stock-charts" id = "stock-chart-xx-time">
     </div>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <div id="myDiv" style="width: 100%; height: 100%;"></div>
+
     <script>
         document.getElementById('textForm').addEventListener('submit', async function(event) {
             event.preventDefault(); // Prevent form submission from reloading the page
@@ -127,7 +130,6 @@
                 <h3 style="margin: 0; font-size: 2.5rem;">Stock Charts</h3>
                 <hr>
                 <div class="button-container">
-                    <button class="action-button" onclick="callAPI('${inputText}', '1D');">1D</button>
                     <button class="action-button" onclick="callAPI('${inputText}', '5D');">5D</button>
                     <button class="action-button" onclick="callAPI('${inputText}','1M');">1M</button>
                     <button class="action-button" onclick="callAPI('${inputText}','3M');">3M</button>
@@ -148,9 +150,7 @@
         });
 
         async function callAPI(inputText, buttonId) {
-            console.log(buttonId);
-            console.log(inputText);
-            
+
             const response = await fetch(`http://127.0.0.1:5000/api/stock/chart`, {
                 method: 'POST', // or 'POST', depending on your API
                 headers: {
@@ -159,10 +159,18 @@
                 body: JSON.stringify({ stock_code: inputText , time_duration : buttonId })
             });
 
-            const data = response.json();
+            const data1 = await response.json();
+
+            var trace1 = {
+                x: data1['x_axis'],
+                y: data1['y_axis'],
+                type: 'scatter'
+            };
             
-            
-        }
+            var data = [trace1];
+
+            Plotly.newPlot('myDiv', data);
+            };
 
     </script>
 </body>
